Point Cloud Density crashes on real time rendering #46646

Closed
opened 2015-10-30 19:19:34 +01:00 by Thomas Beck · 9 comments
Member

Hi Sergey,

this is one for you :)

System Information
Ubuntu 64, 16GB RAM, 2* GTX 560 ti oc 2GB, i7

Blender Version
Broken: Current master and 2.76 official
Worked: Could not find one that works

Short description of error
Take the supplied file PointCloudBug.blend and start realtime rendering via Shift+Z, then click in the timeline somewhere to change to another frame...it will crash immediately. Sorry that I had to upload a file with 20 MB and such a high compression - I could not reproduce it with f.e. 10000 particles :(

I'm adding the crashlog too PointCloudBug.crash.txt (it's from a release build - when you need more, just tell me, I'll switch to debug then)

Many greetings,
Thomas

Hi Sergey, this is one for you :) **System Information** Ubuntu 64, 16GB RAM, 2* GTX 560 ti oc 2GB, i7 **Blender Version** Broken: Current master and 2.76 official Worked: Could not find one that works **Short description of error** Take the supplied file [PointCloudBug.blend](https://archive.blender.org/developer/F248520/PointCloudBug.blend) and start realtime rendering via Shift+Z, then click in the timeline somewhere to change to another frame...it will crash immediately. Sorry that I had to upload a file with 20 MB and such a high compression - I could not reproduce it with f.e. 10000 particles :( I'm adding the crashlog too [PointCloudBug.crash.txt](https://archive.blender.org/developer/F248526/PointCloudBug.crash.txt) (it's from a release build - when you need more, just tell me, I'll switch to debug then) Many greetings, Thomas
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Thomas Beck 2015-10-30 19:19:34 +01:00
Author
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Could not reproduce here

Could not reproduce here

Cant really reproduce the issue but know what's the issue is. Will try to solve it.

Cant really reproduce the issue but know what's the issue is. Will try to solve it.

Proposed patch submitted to D1614.

Proposed patch submitted to [D1614](https://archive.blender.org/developer/D1614).

This issue was referenced by 415b5a4369

This issue was referenced by 415b5a43690b3b823506871335281df717309f72

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@b4be7bc8dd

This issue was referenced by blender/cycles@b4be7bc8ddcafd4d339b98a417eb3a955a84716f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46646
No description provided.