intern/cycles/blender/blender_shader.cpp
@@ -184,6 +184,7 @@ static ShaderNode *add_node(Scene *scene,
                             BL::RenderEngine b_engine,
                             BL::BlendData b_data,
                             BL::Scene b_scene,
+                            const bool background,
                             ShaderGraph *graph,
                             BL::ShaderNodeTree b_ntree,
                             BL::ShaderNode b_node)
@@ -763,6 +764,8 @@ static ShaderNode *add_node(Scene *scene,
 
 		/* TODO(sergey): Use more proper update flag. */
 		if(true) {
+			int settings = background ? 1 : 0;  /* 1 - render settings, 0 - vewport settings. */
+			b_point_density_node.cache_point_density(b_scene, settings);
 			scene->image_manager->tag_reload_image(
 			        point_density->filename,
 			        point_density->builtin_data,
@@ -852,6 +855,7 @@ static void add_nodes(Scene *scene,
                       BL::RenderEngine b_engine,
                       BL::BlendData b_data,
                       BL::Scene b_scene,
+                      const bool background,
                       ShaderGraph *graph,
                       BL::ShaderNodeTree b_ntree,
                       const ProxyMap &proxy_input_map,
@@ -937,6 +941,7 @@ static void add_nodes(Scene *scene,
 				          b_engine,
 				          b_data,
 				          b_scene,
+				          background,
 				          graph,
 				          b_group_ntree,
 				          group_proxy_input_map,
@@ -984,6 +989,7 @@ static void add_nodes(Scene *scene,
 				                b_engine,
 				                b_data,
 				                b_scene,
+				                background,
 				                graph,
 				                b_ntree,
 				                BL::ShaderNode(*b_node));
@@ -1046,6 +1052,7 @@ static void add_nodes(Scene *scene,
                       BL::RenderEngine b_engine,
                       BL::BlendData b_data,
                       BL::Scene b_scene,
+                      const bool background,
                       ShaderGraph *graph,
                       BL::ShaderNodeTree b_ntree)
 {
@@ -1054,6 +1061,7 @@ static void add_nodes(Scene *scene,
 	          b_engine,
 	          b_data,
 	          b_scene,
+	          background,
 	          graph,
 	          b_ntree,
 	          empty_proxy_map,
@@ -1083,7 +1091,7 @@ void BlenderSync::sync_materials(bool update_all)
 			if(b_mat->use_nodes() && b_mat->node_tree()) {
 				BL::ShaderNodeTree b_ntree(b_mat->node_tree());
 
-				add_nodes(scene, b_engine, b_data, b_scene, graph, b_ntree);
+				add_nodes(scene, b_engine, b_data, b_scene, !preview, graph, b_ntree);
 			}
 			else {
 				ShaderNode *closure, *out;
@@ -1126,7 +1134,7 @@ void BlenderSync::sync_world(bool update_all)
 		if(b_world && b_world.use_nodes() && b_world.node_tree()) {
 			BL::ShaderNodeTree b_ntree(b_world.node_tree());
 
-			add_nodes(scene, b_engine, b_data, b_scene, graph, b_ntree);
+			add_nodes(scene, b_engine, b_data, b_scene, !preview, graph, b_ntree);
 
 			/* volume */
 			PointerRNA cworld = RNA_pointer_get(&b_world.ptr, "cycles");
@@ -1217,7 +1225,7 @@ void BlenderSync::sync_lamps(bool update_all)
 
 				BL::ShaderNodeTree b_ntree(b_lamp->node_tree());
 
-				add_nodes(scene, b_engine, b_data, b_scene, graph, b_ntree);
+				add_nodes(scene, b_engine, b_data, b_scene, !preview, graph, b_ntree);
 			}
 			else {
 				ShaderNode *closure, *out;
